2003-02-08  Hiroyuki Ito <hito@crl.go.jp>

	* [w3m-dev 03736] dirlist sort
	* scripts/dirlist.cgi.in (right_dir): use cmp for filename comparison

2003-02-07  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03735] Re: make error of checkType arg
	* etc.c (checkType): delete USE_ANSI_COLOR
	* file.c (addnewline): macro for USE_ANSI_COLOR
		(readHeader): rewrite of USE_ANSI_COLOR
		(HTMLlineproc2body): ditto
		(addnewline2): ditto
		(addnewline): ditto
		(loadBuffer): ditto
		(getNextPage): ditto
	* proto.h (checkType): macro for USE_ANSI_COLOR

2003-02-07  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03733] Re: display decoded URL
	* display.c (make_lastline_link): buf->document_code

2003-02-07  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03732] Re: scroll() is slow ?
	* configure (use_raw_scroll): added
		(config.h) use_raw_scroll
	* config.h.dist (USE_RAW_SCROLL): added
	* display.c (displayBuffer): ifdef USE_RAW_SCROLL
	* proto.h (scroll): ifdef USE_RAW_SCROLL
		(rscroll): ditto
		(need_clrtoeol): if 0
		(terms.c): if 0 need_clrtoeol
		(scroll_raw): ifdef USE_RAW_SCROLL

2003-02-06  Fumitoshi UKAI  <ukai@debian.or.jp>

	* NEWS: rc: decode_url

2003-02-06  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03730] display decoded URL
	* anchor.c (link_list_panel): support DecodeURL
	* display.c (make_lastline_link): support DecodeURL
	* etc.c (url_unquote_conv): added
	* fm.h (DecodeURL): added
	* history.c (historyBuffer): support DecodeURL
	* indep.c (QUOTE_MAP): added
		(HTML_QUOTE_MAP): added
		(html_quote_char): deleted
		(url_quote): use is_url_quote
		(file_quote): use is_file_quote
		(is_url_safe): deleted
		(Str_form_quote): use is_url_unsafe
		(Str_url_unquote): add safe args
		(is_shell_safe): delete
		(shell_quote): use is_shell_unsafe
	* indep.h (QUOTE_MAP): added
		(HTML_QUOTE_MAP): added
		(HTML_QUOTE_MASK): added
		(SHELL_UNSAFE_MASK): added
		(URL_QUOTE_MASK): added
		(FILE_QUOTE_MASK): added